--- a/static/css/game.css
+++ b/static/css/game.css
@@ -72,6 +72,7 @@ div {
     width: 100%;
     text-align: center;
     margin-top: 25%;
+    z-index: -1;
 }
 
 .star {
@@ -79,6 +80,8 @@ div {
     margin-top: 5%;
     margin-left: 7%;
     font-size: 2.5em;
+    opacity: 0.4;
+    z-index: -1;
 }
 
 .br-l {
@@ -166,4 +169,42 @@ div {
     width: 100%;
     height: 40%;
     display: flex;
+}
+
+.loader {
+    -webkit-animation: spin 4s linear infinite;
+    /* Safari */
+    animation: spin 4s linear infinite;
+}
+
+.spin-loader {
+    border: 4px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 4px solid #000;
+    width: 30px;
+    height: 30px;
+    -webkit-animation: spin 2s linear infinite;
+    /* Safari */
+    animation: spin 2s linear infinite;
+}
+
+
+/* Safari */
+
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
