Game v1 - Local multiplayer mode (same device)
Todo:
- Control the number of players
- Find if game finished and display results
- Server mode

--- a/static/css/game.css
+++ b/static/css/game.css
@@ -61,6 +61,25 @@ div {
     width: 33.33%;
 }
 
+#diceTop {
+    width: 600px;
+    height: 40px;
+    margin: auto;
+    border: 1px solid black;
+    text-align: center;
+    font-size: 2em;
+    transform: rotate(180deg);
+}
+
+#diceBottom {
+    width: 600px;
+    height: 40px;
+    margin: auto;
+    text-align: center;
+    font-size: 2em;
+    border: 1px solid black;
+}
+
 #outer {
     width: 600px;
     height: 600px;
